# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-rhythm-analysis"
version = "0.1.0"
description = "ETL + models for PPG-based rhythm analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "scipy",
  "zarr",
  "pandas",
  # etc…
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks", "trained_model"]